spade-tests/src/snapshots/spade_tests__ast_lowering__invisible_struct_is_invisible.snap
---
source: spade-tests/src/ast_lowering.rs
---
mod a {
    struct Secret {}
}

fn test() -> a::Secret {
    a::Secret()
}


error: Secret is inaccessible
  ┌─ testinput:5:17
  │
2 │     struct Secret {}
  │     ---------------- The inaccessible item is defined here
  ·
5 │ fn test() -> a::Secret {
  │                 ^^^^^^ Secret is inaccessible
  │
  = note: consider using `pub` to alter its visibility
